app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kefir-test
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: kefir-test
  type: NodePort
